# reality

./: Brain.cpp  Brain.h  CMakeLists.txt  Culture.h  Fundamental.h  Information.h  Live.h  Matter.h  Spiritual.cpp  Spiritual.h  main.cpp
